<resources>
    <string name="app_name">WanAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="string_collect_title">我的收藏</string>
    <string name="string_login_title">登录/注册</string>
    <string name="string_home">首页</string>
    <string name="string_article">文章</string>
    <string name="string_project">项目</string>
    <string name="string_my">我的</string>
    <string name="string_share">分享</string>
    <string name="string_collect">收藏</string>
    <string name="string_copy_url">复制链接</string>
    <string name="string_open_browser">浏览器打开</string>
    <string name="string_cancel">取消</string>
    <string name="string_todo">TODO工具</string>
    <string name="string_know_system">知识体系</string>
    <string name="string_update">更新</string>
    <string name="string_about">关于</string>
    <string name="string_logout">退出登录</string>
    <string name="string_collected">已收藏</string>
    <string name="string_search">搜索</string>
    <string name="string_login">登录</string>
    <string name="string_register">注册</string>
    <string name="string_user_name">用户名</string>
    <string name="string_pwd">密码</string>
    <string name="string_re_pwd">确认密码</string>
    <string name="string_load_failed">加载失败</string>
    <string name="string_confirm">确定</string>
    <string name="about_content"><![CDATA[
        <h3>软件内容(内容复制):</h3>
        <p>\t\t本软件是一款本人抽空写的安卓练手项目，后台数据由鸿洋大神的玩andoird提供，其实网上已经有很多版本优秀的的Wanandroid 安卓项目了，但是觉得自己不亲自实践就永远不会遇到
        开发中的问题。在这过程中，也会思考一些自己的东西。功能基本已经完成，可能还不够细致，后期有空再更新。
        </p>

        <h3>源码位置:</h3>
        <p>\t\t项目地址：<a href="https://github.com/JianGsHanz/WanAndroid" target="_blank">https://github.com/JianGsHanz/WanAndroid</a></p>
        <p>\t\t本软件开源，如果你发现任何错误，欢迎勾搭，我会虚心学习，感谢各位大佬们支持</p>
    ]]></string>
    <string name="float_button">com.zyh.wanandroid.utils.behavior.FabScrollBehavior</string>
    <string name="bottom_bervaior">com.zyh.wanandroid.utils.behavior.BottomNavigationBehavior</string>
</resources>
