<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <!--app:showAsAction
    1.always：总是显示在界面上
    2.never：不显示在界面上，只让出现在右边的三个点中
    3.ifRoom：如果有位置才显示，不然就出现在右边的三个点中-->
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_tab_home"
        android:title="@string/string_home"
        />

    <item
        android:id="@+id/navigation_article"
        android:icon="@drawable/selector_tab_article"
        android:title="@string/string_article" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/selector_tab_category"
        android:title="@string/string_project" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/selector_tab_my"
        android:title="@string/string_my" />
</menu>
