<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/iv_head_round"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_height="80dp"
        android:layout_width="80dp"
        fresco:roundingBorderColor="@color/colorBlack"
        fresco:roundAsCircle="true"
        fresco:roundingBorderWidth="1dp"
        />
    <Button
        android:id="@+id/bt_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bt_style"
        android:text="@string/string_login_title"
        app:layout_constraintTop_toBottomOf="@id/iv_head_round"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_collect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginTop="@dimen/d_20"
        android:padding="@dimen/d_5"
        android:background="@drawable/layer_list_bottom"
        app:layout_constraintTop_toBottomOf="@id/bt_login_register">
        <TextView
            android:id="@+id/tv_collect"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_height"
            android:gravity="center"
            android:drawablePadding="@dimen/d_5"
            android:drawableLeft="@mipmap/ic_collect_tag"
            android:text="@string/string_collect"
            android:textSize="@dimen/sp14"
            android:layout_marginTop="20dp"/>
        <ImageView
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@mipmap/ic_arrow"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_knowledge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:padding="@dimen/d_5"
        android:background="@drawable/layer_list_bottom"
        app:layout_constraintTop_toBottomOf="@id/cl_collect">
        <TextView
            android:id="@+id/tv_knowledge"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_height"
            android:gravity="center"
            android:drawablePadding="@dimen/d_5"
            android:drawableLeft="@mipmap/ic_knowledge_system"
            android:text="@string/string_know_system"
            android:textSize="@dimen/sp14"
            android:layout_marginTop="20dp"/>
        <ImageView
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@mipmap/ic_arrow"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_todo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:padding="@dimen/d_5"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/cl_knowledge">
        <TextView
            android:id="@+id/tv_todo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_height"
            android:gravity="center"
            android:drawablePadding="@dimen/d_5"
            android:drawableLeft="@mipmap/ic_todo"
            android:text="@string/string_todo"
            android:textSize="@dimen/sp14"
            android:layout_marginTop="20dp"/>
        <ImageView
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@mipmap/ic_arrow"/>
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginTop="20dp"
        android:padding="@dimen/d_5"
        android:background="@drawable/layer_list_bottom"
        app:layout_constraintTop_toBottomOf="@id/cl_todo">
        <TextView
            android:id="@+id/tv_update"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_height"
            android:gravity="center"
            android:drawablePadding="@dimen/d_5"
            android:drawableLeft="@mipmap/ic_update"
            android:text="@string/string_update"
            android:textSize="@dimen/sp14"
            android:layout_marginTop="20dp"/>
        <ImageView
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@mipmap/ic_arrow"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:padding="@dimen/d_5"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/cl_update">
        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_height"
            android:gravity="center"
            android:drawablePadding="@dimen/d_5"
            android:drawableLeft="@mipmap/ic_about"
            android:text="@string/string_about"
            android:textSize="@dimen/sp14"
            android:layout_marginTop="20dp"/>
        <ImageView
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@mipmap/ic_arrow"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>